# ia-agentic-tps

./: .env  README.md  langchain.ipynb
Evaluation_finale/: .env  FinanceAdvisor.ipynb  FinanceAdvisor.py  README.md  langgraph.json  pyproject.toml
Evaluation_finale/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
TP1/: .env  pyproject.toml  tpprompt_Zakaria_ABDERRAHIM.ipynb
TP3/: README.md  pyproject.toml  rag.ipynb
TP4/: README.md  agentMCP.py  agentMCPTime.py  agentMCPTravel.py  pyproject.toml
TP4/ressources/: mcp_local_server.py
TP6/: README.md  agent_avec_context.py  pyproject.toml
TP7/: README.md  agentHITL.ipynb  pyproject.toml
TP8/: .env  README.md  conditional_workflow.py  hello_graph.py  langgraph.json  message_state.py  pyproject.toml  reducers_demo.py  two_step_workflow.py  workflow_loop.py
TP9/: README.md  agent_Langgraph.py  langgraph.json  pyproject.toml  tools_setup.py
TP9/Capture/: .langgraph_ops.pckl
TP_2/: langchain.ipynb  pyproject.toml
TP_5/: .env  README.md  langgraph.json  multi-agent.py  pyproject.toml
TP_ChefPersonnel/: README.md  agent_chef.ipynb  pyproject.toml
TP_ChefPersonnel/data/: recettes.txt
