[project]
name = "tp4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "ollama>=0.6.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
]
