[project]
name = "tp5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph-cli[inmem]>=0.4.29",
    "ollama>=0.6.2", 
    "tavily>=1.1.0",
] 
