[project]
name = "tp-chefpersonnel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-agent>=0.1.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
